fixed a few other bugs, still not finished yet